# algorist

./: .eslintrc  .gitignore  CLAUDE.md  PATTERN_TEMPLATE.md  PHASE2_CATEGORIZATION.md  README.md  REORGANIZATION_COMPLETE.md  REORGANIZATION_PLAN.md  package.json  pyproject.toml
_answerTemplate/: _.js  _.test.js  answer_template.py
algos/bst/: 700.js
applications/: README.md
applications/constraint-satisfaction/: README.md  arc_consistency_ac3.py  sudoku.py
applications/optimization/: README.md  combo-sum.py
applications/scheduling/: README.md  weighted_intervals.py
archive/library_2022/: disjoint_set_union.py
archive/mindset/: README.md
behavior_patterns/: README.md
behavior_patterns/array_pointers/: README.md
behavior_patterns/grid_traversal/: README.md  practice.py
behavior_patterns/optimizations/: general-overview.html  leetcode-list.md
data-structures/heaps/: max_heap.md
data-structures/trees/: generateTree.js
design_patterns/observables/: README.md
docs/: CLEANUP_PROPOSAL.md  MERGE_STRATEGY.md
flashcards/: 12-Apr-2025.py  13-Apr-2025.py
library_2022/DP/: dp_for_coding_interviews.ipynb  dp_notes.ipynb
library_2022/recursion/: RECURSION_get_list_permutations.ipynb
morphio/: gang-of-four.html  sliding-window.html  two-pointers.html
morphio-react/: LEETCODE_PROBLEMS_GUIDE.md  index.html  package-lock.json  package.json
patterns/: 10-bfs.md  14-trie.md  16-binary-search.md  20-dynamic-programming.md  26-string-matching.md  27-segment-tree.md  README.md
scheduler/: README.md  main.py
study_curriculum/: README.md
(+264 files in other folders)
